# django-auth

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_all_checks.sh  setup.cfg
.github/actions/dependency-install/: action.yml
.github/actions/setup-poetry/: action.yml
.github/workflows/: main.yml
scripts/ci/: format.sh  pylint.sh  unit_test.sh
tests/unit/: test_true.py
